# agentic-garmin-coach

./: .env.example  .gitignore  CLAUDE.md  README.md  check_ctl.py  claude.json  get_session.py  pyproject.toml
.github/workflows/: ci.yml
agents/: CLAUDE.md  coach_agent.py  context_agent.py  data_agent.py  form_agent.py  garmin_agent.py  hydration_agent.py  koop_plan_agent.py  memory_agent.py  metrics.py  pipeline.py  plan_agent.py  plan_html_agent.py  synthesis_agent.py  telegram_bot.py
plans/: achilles_protocol_2026-07-09.md  gauja_90k_2026.html  gauja_90k_2026.md
tests/: conftest.py  helpers.py  test_business_scenarios.py  test_context_agent.py  test_contracts.py  test_data_agent.py  test_garmin_agent.py  test_graph.py  test_hydration_agent.py  test_koop_plan_agent.py  test_metrics.py  test_plan_html_agent.py  test_routing.py
tests/fixtures/: coach_llm_ok.json  garmin_atp.json  garmin_calendar.json  intervals_activities.json  intervals_wellness.json  plan_llm_illness.json  plan_llm_ok.json
tools/: analyze_thresholds.py  garmin_auth.py  setup_cron.sh  show_activities.py  show_wellness.py
