[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "garmin-coach"
version     = "0.1.0"
description = "Agentic Garmin Coach powered by Claude + MCP"
readme      = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "garminconnect>=0.2.25",
    "garth>=0.8.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
garmin-coach = "garmin_coach.coach:interactive_session"

[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["tests"]
pythonpath      = ["agents", "tests"]
markers         = ["integration: requires live Garmin credentials"]

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_coach"]
